<?xml version="1.0" encoding="utf-8"?>
<!-- Pantalla de inicio de sesión -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream_background">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Logo -->
        <ImageView
            android:src="@mipmap/iconplace"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="16dp" />

        <!-- Título -->
        <TextView
            android:text="@string/login_titulo"
            android:textColor="@color/brown_dark"
            android:textStyle="bold"
            android:textSize="26sp"
            android:layout_marginBottom="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!-- Campo de correo -->
        <EditText
            android:id="@+id/inputEmail"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:backgroundTint="@color/brown_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp" />

        <!-- Campo de contraseña -->
        <EditText
            android:id="@+id/inputPassword"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:backgroundTint="@color/brown_light"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp" />

        <!-- Botón de inicio de sesión -->
        <Button
            android:id="@+id/btnLogin"
            android:text="@string/btn_login"
            android:backgroundTint="@color/coffee_primary"
            android:textColor="@color/white"
            android:layout_marginTop="28dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Enlace a registro -->
        <TextView
            android:id="@+id/tvGoRegister"
            android:text="@string/login_link_registro"
            android:textColor="@color/brown_dark"
            android:textSize="14sp"
            android:layout_marginTop="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:layout_height="60dp"
            android:layout_width="match_parent" />
    </LinearLayout>
</ScrollView>
